# nuxt-wasm

./: bun.lockb  nuxt.config.ts  package.json
src/: app.vue
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
