[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
description = "Nuxt3 with Wasm"
repository = "https://github.com/inomata137/nuxt-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.88"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.65"
fixedbitset = "0.4.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
